traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:18: error: illegal start of simple expression
  do{}while()
            ^Snake:19: error: ')' expected but '}' found.
} 
^